--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+      - name: System update
+        run: sudo apt-get update && sudo apt-get upgrade
       - name: Install packages
         run: sudo apt-get install --yes tcpdump tshark
       - name: Install neovim
